Change validation of address home, and max legnth of fields

--- a/app/app/src/main/res/layout/fragment_invest_details.xml
+++ b/app/app/src/main/res/layout/fragment_invest_details.xml
@@ -69,8 +69,12 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="45dp"
+                android:backgroundTint="@color/loanppi"
                 android:inputType="number"
+                android:maxLength="7"
                 android:textAlignment="center"
+                android:textColorHighlight="#FF7054"
+                android:textColorLink="@color/loanppi"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.08"
