--- a/app/app/src/main/res/layout/fragment_lend.xml
+++ b/app/app/src/main/res/layout/fragment_lend.xml
@@ -40,10 +40,13 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="60dp"
-                android:ems="10"
+                android:backgroundTint="@color/loanppi"
                 android:hint="¿Cuánto necesita?"
                 android:inputType="number"
+                android:maxLength="7"
                 android:textAlignment="center"
+                android:textColorHighlight="#FF7054"
+                android:textColorLink="@color/loanppi"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.08"
                 app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +60,9 @@
                 android:layout_marginTop="24dp"
                 android:entries="@array/lend_reason"
                 android:textAlignment="center"
+                android:textColorHighlight="#FF7054"
+                android:textColorLink="@color/loanppi"
+                android:backgroundTint="@color/loanppi"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.08"
                 app:layout_constraintStart_toStartOf="parent"
