--- a/app/app/src/main/res/layout/fragment_profile.xml
+++ b/app/app/src/main/res/layout/fragment_profile.xml
@@ -64,13 +64,12 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="32dp"
-
-                android:backgroundTint="@color/loanppi"
                 android:ems="10"
                 android:hint="@string/first_name"
                 android:inputType="textPersonName"
                 android:textColorHighlight="#FF7054"
                 android:textColorLink="@color/loanppi"
+                android:backgroundTint="@color/loanppi"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toStartOf="@+id/edit_second_name"
                 app:layout_constraintHeight_percent="0.06"
@@ -87,6 +86,9 @@
                 android:ems="10"
                 android:hint="@string/second_name"
                 android:inputType="textPersonName"
+                android:textColorHighlight="#FF7054"
+                android:textColorLink="@color/loanppi"
+                android:backgroundTint="@color/loanppi"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.06"
@@ -103,6 +105,9 @@
                 android:ems="10"
                 android:hint="@string/first_last_name"
                 android:inputType="textPersonName"
+                android:textColorHighlight="#FF7054"
+                android:textColorLink="@color/loanppi"
+                android:backgroundTint="@color/loanppi"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toStartOf="@+id/edit_second_last_name"
                 app:layout_constraintHeight_percent="0.06"
@@ -118,6 +123,9 @@
                 android:ems="10"
                 android:hint="@string/second_last_name"
                 android:inputType="textPersonName"
+                android:textColorHighlight="#FF7054"
+                android:textColorLink="@color/loanppi"
+                android:backgroundTint="@color/loanppi"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.06"
@@ -131,6 +139,9 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="32dp"
                 android:entries="@array/documents_type"
+                android:textColorHighlight="#FF7054"
+                android:textColorLink="@color/loanppi"
+                android:backgroundTint="@color/loanppi"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toStartOf="@+id/edit_id_document"
                 app:layout_constraintHeight_percent="0.06"
@@ -146,6 +157,9 @@
                 android:ems="10"
                 android:hint="@string/document_number"
                 android:inputType="textPersonName"
+                android:textColorHighlight="#FF7054"
+                android:textColorLink="@color/loanppi"
+                android:backgroundTint="@color/loanppi"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.06"
@@ -175,6 +189,9 @@
                 android:ems="10"
                 android:hint="@string/phone_number"
                 android:inputType="phone"
+                android:textColorHighlight="#FF7054"
+                android:textColorLink="@color/loanppi"
+                android:backgroundTint="@color/loanppi"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toStartOf="@+id/edit_email_address"
                 app:layout_constraintHeight_percent="0.06"
@@ -191,6 +208,9 @@
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:enabled="false"
+                android:textColorHighlight="#FF7054"
+                android:textColorLink="@color/loanppi"
+                android:backgroundTint="@color/loanppi"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHeight_percent="0.06"
@@ -206,6 +226,9 @@
                 android:ems="10"
                 android:hint="@string/home_address"
                 android:inputType="textPostalAddress"
+                android:textColorHighlight="#FF7054"
+                android:textColorLink="@color/loanppi"
+                android:backgroundTint="@color/loanppi"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintEnd_toEndOf="@+id/edit_email_address"
                 app:layout_constraintHeight_percent="0.06"
