--- a/app/app/src/main/res/layout/fragment_my_loan.xml
+++ b/app/app/src/main/res/layout/fragment_my_loan.xml
@@ -67,6 +67,7 @@
                 android:id="@+id/txt_loan_value_goal_amount"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:layout_marginBottom="10dp"
                 android:text="$0,000,000"
                 android:textAlignment="viewEnd"
                 android:textColor="@color/textPrimary"
@@ -76,18 +77,28 @@
                 app:layout_constraintHeight_percent="0.027"
                 app:layout_constraintWidth_percent="0.2" />
 
+            <ImageView
+                android:id="@+id/img_loan_goal_flag"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:src="@drawable/flag"
+                app:layout_constraintEnd_toEndOf="@+id/bar_loan_progress_moto_bar"
+                app:layout_constraintHeight_percent="0.03"
+                app:layout_constraintTop_toTopOf="@+id/bar_loan_progress_moto_bar"
+                app:layout_constraintWidth_percent="0.07" />
+
             <SeekBar
                 android:id="@+id/bar_loan_progress_moto_bar"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="60dp"
-                android:background="#0D272525"
-                android:progress="0"
+                android:background="#00E10000"
+                android:progress="30"
                 android:progressBackgroundTint="#000000"
                 android:progressTint="@color/loanppi"
                 android:thumb="@drawable/moto1"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_percent="0.06"
+                app:layout_constraintHeight_percent="0.08"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txt_loan_balance"
                 app:layout_constraintWidth_percent="0.8"
