Fix problems with view of progress bar

--- a/app/app/src/main/res/layout/fragment_my_investment_details.xml
+++ b/app/app/src/main/res/layout/fragment_my_investment_details.xml
@@ -108,8 +108,7 @@
                 android:id="@+id/txt_value_amount_returned"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:gravity="start"
-                android:text="0'000.000"
+                android:text="$0,000,000"
                 android:textColor="@color/textPrimary"
                 app:autoSizeTextType="uniform"
                 app:layout_constraintHeight_percent="0.03"
